# kitchen-monitoring

./: .gitignore  README.md  app.py  detection-colab.ipynb  detection.ipynb  main.py  pyproject.toml  run.py
configs/trackers/: botsort.yaml
data/detection/: dataset.yaml
data/detection/train/labels/: img_000000.txt  img_000001.txt  img_000002.txt  img_000003.txt  img_000004.txt  img_000005.txt  img_000006.txt  img_000007.txt  img_000008.txt  img_000011.txt  img_000012.txt  img_000014.txt  img_000015.txt  img_000016.txt  img_000017.txt  img_000018.txt  img_000019.txt  img_000020.txt  img_000022.txt  img_000023.txt  img_000024.txt  img_000026.txt  img_000027.txt  img_000028.txt  img_000029.txt  img_000030.txt  img_000031.txt  img_000032.txt  img_000033.txt  img_000034.txt  img_000035.txt  img_000036.txt  img_000037.txt  img_000038.txt  img_000039.txt  img_000040.txt  img_000041.txt  img_000042.txt  img_000043.txt  img_000044.txt  (+990 more)
data/detection/val/labels/: img_000009.txt  img_000010.txt  img_000013.txt  img_000021.txt  img_000025.txt  img_000046.txt  img_000050.txt  img_000053.txt  img_000055.txt  img_000059.txt  img_000060.txt  img_000075.txt  (+245 more)
docker/: .dockerignore  Dockerfile  compose.yaml
pages/: inference.py  upload.py
scripts/: train_detector.sh  train_dish_classifier.sh  train_tray_classifier.sh  train_yolo.py
src/app/: main.py
src/gradio_ui/: main.py  test.py
src/gradio_ui/tabs/: inference.py  reannotate.py
src/kitchen/: __init__.py  inference.py  visual_tasks.py  visualization.py  yolo.py
src/utils/: schemas.py
streamlit/pages/: inference.py
(+10 files in other folders)
